# ift_coursework_2024

./: .env.template  .gitignore  Dockerfile  README.md  archive.py  companiesintotal_minio.py  docker-compose.yml  integrate_urls.py  miniotest.py  nasdaq.csv  pdf_records.py  pyproject.toml  report_downloader  search.py
Magnolia/: README.md  pyproject.toml
Magnolia/coursework_one/: Dockerfile  docker-compose.yml  pyproject.toml
Magnolia/coursework_one/config/: conf.yaml
Magnolia/coursework_one/docs/_sources/: csr_api.rst.txt
Magnolia/coursework_one/docs/source/: requirements.txt
Magnolia/coursework_one/modules/api/: fastapi_api.py  mongo_index_setup.py  streamlit_app.py
Magnolia/coursework_one/modules/scraper/: csr_fix_and_cleanup.py  csr_scraper.py
Team_Magnolia/coursework_one/modules/scraper/: csr_scraper.py  pyproject.toml
config/: .env  db.py  search.py
docs/: .gitignore  CNAME  README.md  (+4 more)
team_Salix/coursework_one/: README.md  pyproject.toml  pytest.ini  scheduler.py  upload_to_minio.py
team_Salix/coursework_one/a_pipeline/modules/: main.py  notfoundclean.py
team_Salix/coursework_one/b_pipeline/modules/: check_pdf.py  main.py  remove_damaged.py
team_Salix/coursework_one/docs/source/: api.rst  architecture.rst  conf.py  index.rst  installation.rst  testing.rst  usage.rst
team_Salix/coursework_one/docs/source/api/: index.rst
team_Salix/coursework_one/docs/source/modules/: a_pipeline.rst  b_pipeline.rst  index.rst  scheduler.rst  upload_to_minio.rst
team_Salix/coursework_one/tests/: conftest.py  test_upload_to_minio.py
team_Salix/coursework_one/tests/a_pipeline/modules/: test_main.py
team_Salix/coursework_one/tests/b_pipeline/modules/: test_main.py
team_Salix/coursework_one/tests/mock_data/: cleaned_url.csv
team_adansonia/coursework_one/: Dockerfile  pyproject.toml
team_adansonia/coursework_one/a_link_retrieval/: README.md  log.txt  main.py  populated_tracking.json
team_adansonia/coursework_one/a_link_retrieval/config/: .env.template  docker-compose.yml  pyproject.toml
team_adansonia/coursework_one/a_link_retrieval/modules/crawler/: crawler.py  crawler_google_api.py  crawler_google_api_parser_validation.py  google_api_combined_crawler.py  log.txt  sustainability_reports_beautifulsoup.py
team_adansonia/coursework_one/a_link_retrieval/modules/minio/: minio_script.py
team_adansonia/coursework_one/a_link_retrieval/modules/mongo_db/: company_data.py  queries.py
team_adansonia/coursework_one/a_link_retrieval/modules/utils/: dockercheck.py
team_adansonia/coursework_one/a_link_retrieval/modules/validation/: validation.py
team_adansonia/coursework_one/a_link_retrieval/test/: jenkins_test.py  test_crawler.py
team_adansonia/coursework_one/mongo-seed/: seed_data.json
team_adansonia/coursework_one/scheduler/jenkins/: config.xml
team_adansonia/coursework_one/scheduler/jenkins/jobs/1_populate_database/: config.xml
team_adansonia/coursework_one/scheduler/jenkins/jobs/2_get_latest_report/: config.xml
team_dogwood/coursework_one/: .env.template  .flake8  .pre-commit-config.yaml  README.md  archive.py  pyproject.toml
team_dogwood/coursework_one/.github/workflows/: static.yml
team_dogwood/coursework_one/config/: auth.py  db.py  google.py  minio.py  postgres.py  search.py
team_dogwood/coursework_one/docs/: index.html
team_dogwood/coursework_one/docs/source/: conf.py  config.rst  index.rst  modules.rst  src.data_models.rst  src.esg_reports.rst
team_dogwood/coursework_one/orchestration/jenkins/: Dockerfile  Jenkinsfile  plugins.txt
team_dogwood/coursework_one/pipelines/retrieve_store_pdf/: main.py
team_dogwood/coursework_one/pipelines/retrieve_store_url/: main.py
team_dogwood/coursework_one/pipelines/retrieve_store_url/scripts/: retrieve_report_url.py
team_dogwood/coursework_one/pipelines/update_database/: main.py
team_dogwood/coursework_one/scripts/: main.py
team_dogwood/coursework_one/src/data_models/: company.py
team_dogwood/coursework_one/src/database/: load.py  minio.py  postgres.py  write.py
team_dogwood/coursework_one/src/esg_reports/: search.py  validate.py
team_dogwood/coursework_one/src/urls/: search.py  validate.py
team_dogwood/coursework_one/src/utils/: data.py  search.py
team_dogwood/coursework_one/src/utils.py/: data.py
team_dogwood/coursework_one/tests/: conftest.py
team_dogwood/coursework_one/tests/test_esg_reports/: test_search.py  test_validate.py
team_dogwood/coursework_one/tests/test_src/test_esg_reports/: test_search.py  test_validate.py
team_dogwood/coursework_one/tests/test_src/test_utils/: test_search.py
team_dogwood/coursework_two/: .env.template  .pre-commit-config.yaml  TODO.md  pyproject.toml
team_dogwood/coursework_two/config/: models.py
team_dogwood/coursework_two/data/sample-outputs/: test.md
team_dogwood/coursework_two/src/data_models/: documents.py  metrics.py
team_dogwood/coursework_two/src/extract/: parse.py  query.py  text.py
team_jacaranda/coursework_one/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
team_jacaranda/coursework_one/modules/: DataRetrieval.py  Integrate_urls.py  create_table.py  integrate_urls.py  kafka_minio_integration.py  kafka_producer.py  main.py  website+google.py  website_google.py
team_jacaranda/coursework_one/modules/db/: company_pdf_links.json
team_jacaranda/coursework_one/test/: 00_Structure.txt  01_Unit.py  02_Integration.py  03_e2e.py  04_Conftest.py
team_sakura/coursework_one/: Dockerfile_Jenkins  Dockerfile_pipeline  pyproject.toml
team_sakura/coursework_one/a_pipeline/: README.md  main.py
team_sakura/coursework_one/a_pipeline/config/: conf.yaml
team_sakura/coursework_one/a_pipeline/modules/db_loader/: mongo_db.py  sqlite_loader.py
team_sakura/coursework_one/a_pipeline/modules/minio_writer/: minio_client.py
team_sakura/coursework_one/a_pipeline/modules/url_parser/: api.py  app.py  extract_year.py
team_sakura/coursework_one/a_pipeline/modules/url_parser/templates/: filter.html
team_sakura/coursework_one/a_pipeline/test/: testing.py
team_sakura/coursework_one/c_pipeline/: README.md
(+146 files in other folders)
