[project]
name = "coursework_one_Magnolia"
version = "0.1.0"
description = "CSR Report"
authors = [
    {name = "Yunxiang Ji", email = "yunxiang.ji.24@ucl.ac.uk"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "minio>=7.2.2",
    "flask>=2.2.5",
    "pyyaml (>=6.0.2,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

