[tool.poetry]
name = "team-dogwood-cw1"
version = "0.1.0"
description = "Submission for Coursework 1 of the IFTE0003 course 'Big Data in Quantitative Finance' at UCL."
authors = ["Iman Zafar", "Siyu Wang", "Yiwen Chan", "Xinyi Wang", "Sardor Jumaev", "Gabriella Larrisa", "Jingyu Yang"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
pre-commit = "^4.1.0"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
bandit = "^1.8.2"
pytest = "^8.3.4"
pydantic-settings = "^2.7.1"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501", "W503", "E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
