[project]
name = "team-dogwood-coursework-two"
version = "0.1.0"
description = ""
authors = [
    {name = "Team Dogwood"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "bandit (==1.8.2)",
    "pytest (>=8.3.4,<9.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "safety (>=3.3.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sphinx-wagtail-theme (>=6.5.0,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
