[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = ""
authors = ["TeamJacaranda"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
google-api-python-client = "^2.36.0"
psycopg2 = "^2.9.3"
sqlite3 = "^3.36.0"
logging = "^0.4.9.6"
pathlib = "^1.0.1"
urllib3 = "^1.26.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
