[project]
name = "poetry add psycopg2-binary minio requests selenium webdriver-manager chromedriver-autoinstaller"
version = "0.1.0"
description = ""
authors = [
    {name = "yunxiang Ji",email = "yunxiang.ji.@ucl.ac.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
